# kminidlna

./: CMakeLists.txt  CMakeLists.txt~  KminiDLNA.cpp  KminiDLNA.h  KminiDLNA.h~  KminiDLNA.kdev4  README  kminidlna.cpp  kminidlna.h  main.cpp  main.cpp~  mainwidget.cpp  mainwidget.cpp~  mainwidget.h  mainwidget.h~  minidlnaprocess.cpp  minidlnaprocess.h  qminidlna.pro  resource.qrc  resource.qrc~  settingsdialog.cpp  settingsdialog.h  settingsgeneral.cpp  settingsgeneral.h  settingsminidlna.cpp  settingsminidlna.h
.kdev4/: KminiDLNA.kdev4
po/: CMakeList.txt~  cs.po  lokalization  lokalization~
server/: restserver.cpp  serverrequest.cpp
src/: CMakeLists.txt  QMiniDLNA  kminidlna.desktop  kminidlna_version.h.cmake  main.cpp  qminidlna.desktop  resource.qrc
src/core/: CMakeLists.txt  configurationfile.cpp  configurationfile.h  minidlna_configuration.cpp  minidlna_configuration.h  minidlna_process.cpp  minidlna_process.h  pidthread.cpp  pidthread.h
src/core/model/: mediafolder.cpp  mediafolder.h
src/libs/qled/: qled.h  qledmetadata.json  qledplugin.cpp  qledplugin.h  qledplugin.pro
src/po/: CMakeLists.txt  extract-messages.sh
src/resource/: mediafolder.xsd  minidlna_set_state.xsd  minidlna_state.xsd  version.xsd
src/server/: CMakeLists.txt  address.txt  certificategenerator.cpp  certificategenerator.h  restconnection.cpp  restconnection.h  restserver.cpp  restserver.h  serverrequest.cpp  serverrequest.h
src/server/interface/: basicrestresource.cpp  basicrestresource.h  restinterfaces.cpp  restinterfaces.h  restmediafolder.cpp  restmediafolder.h  restminidlna.cpp  restminidlna.h  restminidlnamediafolder.cpp  restminidlnaput.cpp  restminidlnaput.h  restresource.cpp  restresource.h
src/tests/: CMakeLists.txt  certificategeneratortest.cpp  certificategeneratortest.h  configurationfiletest.cpp  configurationfiletest.h  restconnectiontest.cpp  restconnectiontest.h  ~CMakeLists.txt~  ~configurationfiletest.cpp~  ~configurationfiletest.h~
src/view/: CMakeLists.txt  abstractsettings.cpp  abstractsettings.h  foldereditdialog.cpp  foldereditdialog.h  foldereditdialog.ui  generatecertificatedialog.cpp  generatecertificatedialog.h  generatecertificatedialog.ui  kminidlna.cpp  kminidlna.h  mainwidget.cpp  mainwidget.h  mediadirmodel.cpp  mediadirmodel.h  mediadirwidget.cpp  mediadirwidget.h  mediafolders.cpp  mediafolders.h  mediafoldersdialog.cpp  mediafoldersdialog.h  mediafolderswidget.cpp  mediafolderswidget.h  mediafolderswidget.ui  qminidlna.cpp  qminidlna.h  qminidlna.ui  settingconffile.cpp  settingconffile.h  settingconffile.ui  settingdialog.cpp  settingdialog.h  settingdialog.ui  settinggeneral.cpp  settinggeneral.h  settinggeneral.ui  settingmediafolder.cpp  settingmediafolder.h  settingmediafolder.ui  settingminidlna.cpp  (+17 more)
